# HaskellLsystems

./: .gitignore  README.md  cabal.project  lsystems.cabal
src/: Examples.hs  LSystems.hs  Renderer.hs
src/IC/: Colour.hs  Graphics.hs
